# AccurateBerryConnection

./: .gitignore  KspaceGUI.py  KspaceInterpolator.py  LICENSE  Readme.md  atu.py  calcEpsilon.py  calcSigma.py  calcTB.py  combineW90Checkpoints.py  inputParser.py  pyproject.toml  velocityMismatch.py  visualizeBZ.py  visualizeEpsilon.py  visualizeSigma.py
inputs/: .gitignore
nix/: flake.nix
patch/: qe74_velocity.patch  qe75_velocity.patch  wannier90_31_CheckpointBugFix.patch  wannier90_31_memoryErrorBugFix.patch
