[project]
name = "accurate-berry-connection"
version = "0.1.0"
description = "Interpolation schemes for the Berry connection in solids within the Wannier90 framework"
readme = "Readme.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Martin Thümmler" },
    { name = "Thomas Lettau" },
    { name = "Alexander Croy" },
    { name = "Ulf Peschel" },
    { name = "Stefanie Gräfe" },
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "psutil",
    "threadpoolctl",
]
